--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 PORT=5000
 MONGOURI= "mongodb+srv://chemazu:Ratface_3@cluster0.am9d5.mongodb.net/gratis?retryWrites=true&w=majority"
+JWT_SECRET=RTYBEOWNDAOENRW
+JWT_EXPIRE=30d
+JWT_COOKIE_EXPIRE = 30
